# TaskMaster

./: Cargo.toml  Dockerfile  Dockerfile.daemon  README.md  ctl.Dockerfile  d.Dockerfile  en.subject.rst  nginx.Dockerfile  supervisor.Dockerfile  taskmasterd.Dockerfile  tests.cmd  wordpress.Dockerfile
.github/workflows/: docker.yml
config/: apache.conf  cat.conf  cat.yaml  ngnix.json  supervisord.conf  supervisord.json  supervisord.yaml  uncommented.conf
config/ctl/: cat.conf  cat.json  cat.yaml  cat2.json  cat2.yaml  cat3.yaml  idle.json  idle.yaml  ngnix.yaml  wordpress.conf
config/d/: example.conf  supervisord-example.conf  uncommented.yaml
docker/: supervisor.Dockerfile  taskmasterd.Dockerfile
src/: common.rs  config.rs  lib.rs  main.rs
src/ctl/: cli.rs  exec.rs
src/d/: cli.rs  config.rs  config_parser.rs  exec.rs  ini.rs  mod.rs  yaml.rs
tests/: cli.rs
tools/: idle.conf  myprogram.conf  supervisor
