[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde_ini = "0.2.0"
users = "0.11.0"

[[bin]]
name = "taskmasterctl"
path = "src/bin/ctl.rs"

[[bin]]
name = "taskmasterd"
path = "src/bin/d.rs"

[dev-dependencies]
assert_cmd = "2.0.11"
