[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde_ini = "0.2.0"

# Getting user from syscall
users = "0.11.0"

# Getting certain syscalls like UID GUID
nix = "0.26.2"

# Date Time UTC
chrono = "0.4"

[[bin]]
name = "taskmasterctl"
path = "src/bin/ctl.rs"

[[bin]]
name = "taskmasterd"
path = "src/bin/d.rs"

[dev-dependencies]
assert_cmd = "2.0.11"
